# ctxfy

./: .coveragerc  .dockerignore  .gitignore  .safety-project.ini  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env  example_usage.py  fastmcp.json  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.ctxfy/agents/: context-scan.md  context-stack-generator.md  prp-generator.md  skill-discoverer.md
.ctxfy/prompts/: execute-context-scan-agent.md  execute-context-stack-generator-agent.md  execute-prp-generator-agent.md  execute-prp.md  execute-skill-discoverer-agent.md
.ctxfy/rules/: functional-code-imperative-shell.md  testing-strategy.md
.github/workflows/: ci.yml  docker-publish.yml
ai-docs/: prompts.md  template-prp-base.md
ai-docs/base-knowledge/: about-mcp.md  archtecture-overview.md  code-execution.md  mcp-servers-with-qwen-code.md  tool-vs-prompt-evaluation-criteria.md  understanding-mcp-servers.md
ai-docs/code-review/: ctxfy-1-context-stack-generation-review.md  ctxfy-mcp-server-comprehensive-review.md
ai-docs/context/: ctxfy-1-mcp-context-stack.md  ctxfy-10-mcp-server-output-directory-creation-context-stack.md  ctxfy-12-business-requirements-translation-context-stack.md  ctxfy-2-mcp-server-configuration-context-stack.md  ctxfy-2-prp-generation-context-stack.md  ctxfy-4-mcp-server-context-stack.md  ctxfy-5-mcp-reusable-prompts-context-stack.md  ctxfy-6-mcp-server-production-preparation-context-stack.md  ctxfy-review-1-mcp-server-context-stack-testing-error-validation.md  mcp-server-specification-generation-context-stack.md
ai-docs/prp/: ctxfy-1-context-stack-generation.md  ctxfy-10-server-output-directory-creation-prp.md  ctxfy-12-business-requirements-translation-prp.md  ctxfy-2-mcp-server-configuration-backend-prp.md  ctxfy-2-prp-generation-backend.md  ctxfy-4-mcp-server.md  ctxfy-5-mcp-reusable-prompts-prp.md  ctxfy-6-mcp-server-production-preparation-observability-prp.md  ctxfy-review-1-mcp-server-testing-error-validation-prp.md  mcp-server-specification-generation-prp.md
ai-docs/rules/: immutable-value-objects.md  incremental-adoption-of-functional-core.md  orchestrator-pattern-for-imperative-shell.md  package-and-module-architecture.md  python-toolchain-standards.md
ai-docs/tasks/: ctxfy-1-context-stack-generation-technical-spec.md  ctxfy-10-server-output-directory-creation-task.md  ctxfy-12-business-requirements-translation-task.md  ctxfy-2-mcp-server-configuration-spec.md  ctxfy-2-prp-generation-technical-spec.md  ctxfy-4-mcp-server-technical-specification.md  ctxfy-5-mcp-reusable-prompts-technical-specification.md  ctxfy-6-mcp-server-production-preparation-observability.md  mcp-server-specification-generation-technical-spec.md
docs/: api-reference-guide.md  business-one-pager.md  ctxfy_architecture_diagram.md  tech-one-pager.md
examples/: qwen-config.json  settings.json
resources/: prompts.yaml  template_config.yaml
scripts/: validate_docker_build.py  validate_toolchain.py
src/: __init__.py  app.py  config.py  mcp_server.py  settings.py
tests/: conftest.py  test_server_basic.py
(+206 files in other folders)
