[tool.poetry]
name = "ctxfy"
version = "0.1.0"
description = "MCP that transforms business requirements into high-quality code with production-ready observability"
authors = ["Fernando Jr <contato@fernandojr.dev>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.13"
pydantic-settings = "^2.12"
fastmcp = "^2.13.0"
uvicorn = "^0.34.0"
prometheus-client = "^0.22.0"
structlog = "^24.4.0"
cryptography = "^44.0.1"
pydantic = "^2.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14"
mypy = "^1.18"
pytest = "^8.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^7.0"
bandit = "^1.8"
safety = "^3.7"
tox = "^4.32.0"

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"