[tool.poetry]
name = "ctxfy"
version = "0.1.0"
description = "MCP that transforms business requirements into high-quality code with production-ready observability"
authors = ["Fernando Jr <contato@fernandojr.dev>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.13"
pydantic-settings = "^2.12"
fastmcp = "^2.13.0"
uvicorn = "^0.34.0"
cryptography = "^44.0.1"
pydantic = "^2.12"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14"
mypy = "^1.18"
pytest = "^8.2"
pytest-asyncio = "^0.25.0"
pytest-cov = "^7.0"
bandit = "^1.8"
safety = "^3.7"
tox = "^4.32.0"
types-pyyaml = "^6.0.12.20250915"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=html --strict-markers"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (with real/fake adapters)",
    "slow: Tests that take more than 1 second"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "T20"]
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__ for namespace exports

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests", "venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"